Fix overflow bug

--- a/assets/sass/shared/_burger-menu.sass
+++ b/assets/sass/shared/_burger-menu.sass
@@ -58,13 +58,13 @@
 
       #hidden-menu
         color: $white
-        background-color: rgba($black, 0.9)
+        background-color: $black
         position: absolute
         margin: 0
         top: -60px
         right: -50px
         z-index: 32
-        width: 80vw
+        width: 50vw
         height: 100vh
         padding: 50px
         padding-top: 125px
@@ -75,7 +75,9 @@
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
 
         li
-          text-align: center
+          font-weight: bold
+          font-size: 1.5rem
+          line-height: 2.0
+          text-align: right
           padding: 10px 0
-          font-size: 22px
 
