--- a/assets/sass/shared/_navbar.sass
+++ b/assets/sass/shared/_navbar.sass
@@ -59,6 +59,7 @@ nav.top-menu,nav.fixed-menu
 nav.top-menu
   top: $pixel-unit*2
   width: 90%
+  overflow: hidden
 
   img
     width: 70px
